--- a/from-scratch/packages/shared-ui/package.json
+++ b/from-scratch/packages/shared-ui/package.json
@@ -11,7 +11,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
+    "dev": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
     "lint": "tsdx lint",
@@ -25,7 +25,7 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "shared-ui",
+  "name": "@root/shared-ui",
   "author": "Luis Carlin",
   "module": "dist/shared-ui.esm.js",
   "size-limit": [
