--- a/with-pnpm/app/package.json
+++ b/with-pnpm/app/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "app",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,12 +10,14 @@
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "ui": "workspace:*"
   },
   "devDependencies": {
+    "@types/node": "16.11.12",
     "@types/react": "17.0.37",
-    "eslint": "8.5.0",
+    "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
+    "typescript": "4.5.3"
   }
 }
