--- a/with-pnpm/package.json
+++ b/with-pnpm/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "with-pnpm",
+  "name": "turborepo-pnpm",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "workspace": [
+    "app",
+    "ui"
+  ],
   "scripts": {
     "dev": "turbo run dev",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "deploy": "turbo run build --scope=app --includeDependencies --no-deps"
   },
   "turbo": {
     "pipeline": {
@@ -13,15 +18,21 @@
         "cache": false
       },
       "build": {
-        "dependsOn": ["^build"],
-        "outputs": ["./next/**", "dist/**"]
+        "dependsOn": [
+          "^build"
+        ],
+        "outputs": [
+          ".next/**",
+          "dist/**"
+        ]
       }
     }
   },
   "keywords": [],
-  "author": "Luis Carlin",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "turbo": "^1.0.19"
+    "pnpm": "^6.23.6",
+    "turbo": "^1.0.6"
   }
 }
